# star-classifier

./: .gitignore  Dockerfile  Makefile  README.md  model_training.py  predict_service.py  pyproject.toml  star_classification.ipynb
app/: predict_service.py
