[tool.poetry]
name = "start-classification"
version = "0.1.0"
description = ""
authors = ["Camilo Ramirez <camilo.ramirez@onlyfy.com>"]
readme = "README.md"
packages = [{include = "start_classification"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.1.1"
seaborn = "^0.13.0"
ipykernel = "^6.25.2"
xgboost = "^2.0.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
